--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
-        <link rel="icon" href="image/logo1.jpg">
+        <link rel="icon" href="image/logo.jpg">
 	<title>IEEE IAS MAIT</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="ias.css">
@@ -38,8 +38,8 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-			<a href="#" class="navbar-brand">
-				<img id="logo" src="image/logo1.jpg">
+			<a href="" class="navbar-brand">
+				<img id="logo" src="image/logo.jpg">
 			</a>
 		</div>
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -64,7 +64,7 @@
 			<div class="col-sm-6 col-xs-12">
 				<p class="serif about" style="font-size: 20px">
 					If your engineering interests are the needs of the industrial or commercial sector, the Industry Applications Society (IAS) will be a valuable professional connection. One of the largest special interest societies within the Institute of Electrical and Electronics Engineers (IEEE), the IAS focuses specifically on the unique needs of industry and commerce. The Chapter regularly conducts workshops, IEEE society meets, guest lectures and technical events with the motive of bringing insight into industrial skills.
-					Come <a href="https://www.ieee.org/membership/join/index.html?WT.mc_id=hc_join"> join us </a>  to be a part of something bigger.<br><br>
+					Come <a href="https://www.ieee.org/membership/join/index.html?WT.mc_id=hc_join"> JOIN US </a>  to be a part of something bigger.<br><br>
 				</p>
 
 				<h3 class="serif wevalue" id="whatwevalue" style="text-align: left"><strong>What We Value</strong></h3>
@@ -115,7 +115,7 @@
 		<h3 class="serif inauguration" style="text-align: left;"><strong>Inauguration Of IEEE IAS MAIT</strong></h3>
 		<div class="row">
 			<div class="col-sm-4 col-xs-12">
-				<img src="./image/events/inaugration.jpeg" style="width: 100%; margin-bottom: 20px">
+				<img src="./image/events/inauguration.jpeg" style="width: 100%; margin-bottom: 20px">
 			</div>
 			<div class="col-sm-4 col-xs-12">
 				<img src="./image/events/day1.png" style="width: 100%; margin-bottom: 20px ">
@@ -134,6 +134,26 @@
 	<!-- our team -->
 	<div class="container" id="our_team">
 		<h1 class="serif" style="text-align: center"><strong>Meet Our Team</strong></h1><hr style="margin-bottom: 40px;">
+		<div class="row">
+			<div class="col-sm-6 col-xs-12">
+				<div class="card">
+					<img src="./image/prerna-mam.png" style="width: 100%" >
+					  <h3>Prerna Gaur</h3>
+					  <p class="title">Chapter Advisor</p>
+					  <a href="" class="btn btn-social-icon btn-linkedin" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+					  <a href="" class="btn btn-social-icon btn-github"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+				</div>
+			</div>
+			<div class="col-sm-6 col-xs-12">
+				<div class="card">
+					<img src="./image/neelu-mam.png" style="width: 100%" >
+					  <h3>Neelu Nagpal</h3>
+					  <p class="title">Chapter Branch Counsellor</p>
+					  <a href="" class="btn btn-social-icon btn-linkedin" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+					  <a href="" class="btn btn-social-icon btn-github"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+				</div>
+			</div>
+		</div>
 		<div class="row">
 			<div class="col-sm-3 col-xs-6">
 			  <div class="card">
@@ -224,7 +244,7 @@
 		<div class="container contact-us" id="contact">	
 			<h1 class="contact-via serif" align="center"  ><strong> Contact Us </font></strong></h1><hr>
 			<div class=" information col-sm-6 col-xs-12">
-				<p><span class="glyphicon glyphicon-map-marker contact-via" style="font-size: 22px" aria-hidden="true"><strong> ADDRESS: </strong></span> <span style="font-size: 17px">Maharaja Agrasen Institue Of Technology, Rohini, <br> Sector 22, PSP Area, Delhi-110086</span></p>
+				<p><span class="glyphicon glyphicon-map-marker contact-via" style="font-size: 22px" aria-hidden="true"><strong> ADDRESS: </strong></span> <span style="font-size: 17px">IAS IEEE, Maharaja Agrasen Institue Of Technology, Delhi-110086</span></p>
 				<p><span class="glyphicon glyphicon-earphone contact-via" style="font-size: 22px" aria-hidden="true"><strong> PHONE: </strong></span> <span style="font-size: 17px">+91 9555163525<br></span></p>
 				<p><span class="glyphicon glyphicon-envelope contact-via" style="font-size: 22px" aria-hidden="true"><strong> EMAIL: </strong></span> <a href="mailto:ieeeiasmait@gmail.com"><span style="font-size: 17px"> ieeeiasmait@gmail.com</span></a></p><br><br>
 				<div class="social-media">
