--- a/index.html
+++ b/index.html
@@ -135,7 +135,16 @@
 	<div class="container" id="our_team">
 		<h1 class="serif" style="text-align: center"><strong>Meet Our Team</strong></h1><hr style="margin-bottom: 40px;">
 		<div class="row">
-			<div class="col-sm-6 col-xs-12">
+
+
+			<div class="col-sm-2 col-xs-1">
+				<div class="card">
+				</div>
+			</div>
+
+
+			<div class="col-sm-4 col-xs-12">
+
 				<div class="card">
 					<img src="./image/prerna-mam.png" style="width: 100%" >
 					  <h3>Prerna Gaur</h3>
@@ -144,7 +153,7 @@
 					  <a href="" class="btn btn-social-icon btn-github"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
 				</div>
 			</div>
-			<div class="col-sm-6 col-xs-12">
+			<div class="col-sm-4 col-xs-12">
 				<div class="card">
 					<img src="./image/neelu-mam.png" style="width: 100%" >
 					  <h3>Neelu Nagpal</h3>
