--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
-        <link rel="icon" href="image/logo.jpg">
+        <link rel="icon" href="image/logo.png">
 	<title>IEEE IAS MAIT</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="ias.css">
@@ -39,7 +39,7 @@
               <span class="icon-bar"></span>
             </button>
 			<a href="" class="navbar-brand">
-				<img id="logo" src="image/logo.jpg">
+				<img id="logo" src="image/logo.png">
 			</a>
 		</div>
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -138,8 +138,7 @@
 
 
 			<div class="col-sm-2 col-xs-1">
-				<div class="card">
-				</div>
+				
 			</div>
 
 
