--- a/index.html
+++ b/index.html
@@ -56,11 +56,54 @@
 	</nav>
 	<!-- navbar -->
 
-	<!-- about us -->
 	<div class="row-container background">
+
+	<br>
+	<!-- slideshow -->
+		<div class="col-xs-1 col-md-2">
+		</div>
+		<div  class="container carousel slide-show col-xs-10 col-md-8" id="myCarousel" data-ride="carousel">
+		  
+		  <ol class="carousel-indicators">
+		    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		    <li data-target="#myCarousel" data-slide-to="1"></li>
+		    <li data-target="#myCarousel" data-slide-to="2"></li>
+		  </ol>
+
+		  <!-- Wrapper for slides -->
+		  
+		  <div class="carousel-inner">
+		    <div class="item active">
+		      <img src="image/maitimg1.jpg" style="width: 100%">
+		    </div>
+
+		    <div class="item">
+		      <img src="image/maitimg2.jpg" style="width: 100%">
+		    </div>
+
+		    <div class="item">
+		      <img src="image/maitimg3.jpg" style="width: 100%">
+		    </div>
+
+		  </div>
+
+		  <!-- Left and right controls -->
+		  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+		    <span class="glyphicon glyphicon-chevron-left"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+		    <span class="glyphicon glyphicon-chevron-right"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
+		</div>
+
+	<!-- slideshow -->
+
+	<!-- about us -->
 	<div class="row-container about-container" id="about_us">
-		<div class="container">
-			<h1 class="serif" style="text-align: center"><strong>About Us</strong></h1><hr>
+		<div class="container"><br>
+			<h1 class="serif" style="text-align: center"><strong><br><br>About Us</strong></h1><hr>
 			<div class="col-sm-6 col-xs-12">
 				<p class="serif about" style="font-size: 20px">
 					If your engineering interests are the needs of the industrial or commercial sector, the Industry Applications Society (IAS) will be a valuable professional connection. One of the largest special interest societies within the Institute of Electrical and Electronics Engineers (IEEE), the IAS focuses specifically on the unique needs of industry and commerce. The Chapter regularly conducts workshops, IEEE society meets, guest lectures and technical events with the motive of bringing insight into industrial skills.
