--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 				<div class="card">
 					<img src="./image/prerna-mam.png" style="width: 100%" >
-					  <h3>Prerna Gaur</h3>
+					  <h3>Prof. Prerna Gaur</h3>
 					  <p class="title">Chapter Advisor</p>
 					  <a href="" class="btn btn-social-icon btn-linkedin" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
 					  <a href="" class="btn btn-social-icon btn-github"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
@@ -198,7 +198,7 @@
 			<div class="col-sm-4 col-xs-12">
 				<div class="card">
 					<img src="./image/neelu-mam.png" style="width: 100%" >
-					  <h3>Neelu Nagpal</h3>
+					  <h3>Dr. Neelu Nagpal</h3>
 					  <p class="title">Chapter Branch Counsellor</p>
 					  <a href="" class="btn btn-social-icon btn-linkedin" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
 					  <a href="" class="btn btn-social-icon btn-github"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
