day 2 poster changed

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				<img src="./image/events/day1.png" style="width: 100%; margin-bottom: 20px ">
 			</div>
 			<div class="col-sm-4 col-xs-12">
-				<img src="./image/events/day2.png" style="width: 100%; margin-bottom: 20px">
+				<img src="./image/events/day2a.jpeg" style="width: 100%; margin-bottom: 20px">
 			</div>
 		</div>
 		<center><a href="https://bit.ly/2DXB61D" class="btn btn-success btn-lg" target="_blank" style="margin-bottom: 40px;">Register Here!!</a></center>
