--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 				<img src="./image/events/inauguration.jpeg" style="width: 100%; margin-bottom: 20px">
 			</div>
 			<div class="col-sm-4 col-xs-12">
-				<img src="./image/events/day1.png" style="width: 100%; margin-bottom: 20px ">
+				<img src="./image/events/day1a.jpeg" style="width: 100%; margin-bottom: 20px ">
 			</div>
 			<div class="col-sm-4 col-xs-12">
 				<img src="./image/events/day2a.jpeg" style="width: 100%; margin-bottom: 20px">
@@ -348,6 +348,7 @@
 							<li> <span><a href="#events" class="scroll">Events</a></span> </li>
 							<li> <span><a href="#our_team" class="scroll">Our Team</a></span> </li>
 							<li> <span><a href="#contact" class="scroll">Contact Us</a></span> </li>
+							<li> <span><a href="https://mait.ac.in/" class="scroll">Contact @MAIT</a></span> </li>
 					</div>
 					<div class="col-md-5">
 						<h3 class="footer-heading">About IEEE</h3>
