--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li><a href="#about_us">ABOUT US</a></li>
+				<li><a href="#gallery">GALLERY</a></li>
 				<li><a href="#events">EVENTS</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
@@ -151,6 +152,51 @@
 		</div>			
 	</div>
 	<!-- about us -->
+
+	<!-- gallery -->
+
+	<div class="container" id="gallery">
+		<h1 class="serif" style="text-align: center"><strong>Gallery</strong></h1><hr>
+
+		<div class="gallery col-sm-6 col-xs-12">
+		  <a target="_blank" href="./image/events/2.jpg">
+		    <img class="picture" src="./image/events/2.jpg">
+		  </a>
+		  <!-- <div class="desc">Add a description of the image here</div> 
+		  	width="600" height="400">  -->
+		</div>
+
+		<div class="gallery col-sm-6 col-xs-12">
+		  <a target="_blank" href="./image/events/7a.jpg">
+		    <img class="picture" src="./image/events/7a.jpg">
+		  </a>
+		  <!-- <div class="desc">Add a description of the image here</div> -->
+		</div>
+
+		<div class="gallery col-sm-6 col-xs-12">
+		  <a target="_blank" href="./image/events/12a.jpg">
+		    <img class="picture" src="./image/events/12a.jpg">
+		  </a>
+		  <!-- <div class="desc">Add a description of the image here</div> -->
+		</div>
+
+		<div class="gallery col-sm-6 col-xs-12">
+		  <a target="_blank" href="./image/events/14a.jpg">
+		    <img class="picture" src="./image/events/14a.jpg">
+		  </a>
+		  <!-- <div class="desc">Add a description of the image here</div> -->
+		</div>
+
+		<div class="gallery col-sm-6 icol-xs-12">
+		  <a target="_blank" href="./image/events/15a.jpg">
+		    <img class="picture" src="./image/events/15a.jpg">
+		  </a>
+		  <!-- <div class="desc">Add a description of the image here</div> -->
+		</div>
+	</div>
+	
+	<!-- gallery-->
+
 
 	<!-- event -->
 	<div class="container" id="events">
@@ -371,6 +417,8 @@
 	<!-- //copyright -->
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="
 	sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
+	</script>
+
 </body>
 </html>
